# glow

./: .gitmodules
lib/Backends/MetaWareNN/: CMakeLists.txt  CMakeLists_shared_lib.txt  Documentation-GLOW-MetaWareNN-Backend.docx  DummyFunction.cpp  DummyFunction.h  MetaWareNN.cpp  MetaWareNN.h  MetaWareNNDeviceManager.cpp  MetaWareNNDeviceManager.h  MetaWareNNFactory.cpp  MetaWareNNFunction.cpp  MetaWareNNFunction.h  README.md  download_ONNX_models.sh  env.sh  run_ONNX_models.sh
lib/Backends/MetaWareNN/Docker/: Docker.sh  README.md  glow_deps.sh
lib/Backends/MetaWareNN/Inference/: ImageClassifier.cpp  run_inference.sh
lib/Backends/MetaWareNN/docs/: Documentation-GLOW-MetaWareNN-Backend.docx
lib/Backends/MetaWareNN/metawarenn_lib/: metawarenn_attribute.h  metawarenn_common.h  metawarenn_element.h  metawarenn_graph.cc  metawarenn_graph.h  metawarenn_model.h  metawarenn_node.h  metawarenn_tensor.cc  metawarenn_tensor.h  metawarenn_utils.cc  metawarenn_utils.h  metawarenn_value_info.cc  metawarenn_value_info.h
lib/Backends/MetaWareNN/metawarenn_lib/executable_network/: metawarenn_executable_graph.cc
lib/Backends/MetaWareNN/metawarenn_lib/mwnn_inference_api/: mwnn_inference_api.cc  mwnn_inference_api.h  mwnn_inference_shm.cc  mwnn_inference_shm.h
lib/Backends/MetaWareNN/metawarenn_lib/mwnnconvert/: mwnn_convert.sh
lib/Backends/MetaWareNN/metawarenn_lib/mwnnconvert/evconvert/mwnn2ev/: parseMWNN.py
lib/Backends/MetaWareNN/metawarenn_lib/op/: batch_normalization.cc  batch_normalization.h  channel_shuffle.cc  channel_shuffle.h  clip.cc  clip.h
lib/Backends/MetaWareNN/metawarenn_lib/optimizer/: convert_layout.cc  fuse_relu.cc
mwnn_inference/: README.md  download_ONNX_models.sh  download_quantized_tflite_models.sh  env.sh  heterogeneousConfigs.yaml  inference_regression.py  models.txt  test_regression_onnx.py  test_regression_quantized_tflite.py  tflite_quantized_models.txt  validate_models.py  validate_onnx_models.py  validate_quantized_tflite_models.py
mwnn_inference/Docker/: README.md  glow_deps.sh
mwnn_inference/docs/: Documentation-GLOW-MetaWareNN-Backend.docx
